# comfyui-controlfoley

./: .gitignore  LICENSE  README.md  __init__.py  controlfoley_nodes.py  pyproject.toml  requirements.txt
controlfoley/: inference_utils.py
